<resources>
    <string name="app_name">login_page</string>
    <string name="text_signin_message">SIGN IN</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="button_sign_in">Login</string>
    <string name="text_signin_signup">New user? Sign Up</string>
    <string name="text_signin_social_media">Sign In with other apps.</string>
    <string name="app_desc">STORE MANAGEMENT</string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_phone">Phone</string>
    <string name="button_sign_up">Sign up</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="register">Register</string>
</resources>